Commit 2: Adding Business layer

--- a/DnDWebApp/Views/Shared/_Layout.cshtml
+++ b/DnDWebApp/Views/Shared/_Layout.cshtml
@@ -19,16 +19,43 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index">Class Levels:</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index">Class:</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Barbarian">Barbarian</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Bard">Bard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Cleric">Cleric</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Druid">Druid</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Fighter">Fighter</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Monk">Monk</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Paladin">Paladin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassFeatures" asp-action="Index">Class Features</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Ranger">Ranger</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Rogue">Rogue</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Sorcerer">Sorcerer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Warlock">Warlock</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClassLevels" asp-action="Index" asp-route-id="Wizard">Wizard</a>
                         </li>
                         @*<li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
